# game-operator

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: check.yml
crds/minecraft/: minecraft-server.yaml
examples/minecraft/: minecraft-server.yaml
src/: main.py
src/templating/: __init__.py  deployment.py  pvc.py  service.py  yaml_templates.py
src/templating/games/: minecraft.py
src/utils/: __init__.py  minecraft.py
