[project]
name = "game-operator"
version = "0.1.0"
description = "A Kubernetes operator for managing game servers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kopf>=1.39.1",
    "kubernetes>=34.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
